# data-sanitizer

./: .gitignore  README.md  main.py  pyproject.toml  rules.json.example
src/sanitizer/: cli.py  config.py  duplicate.py  models.py  pipeline.py  reader.py  writer.py
src/sanitizer/validators/: date.py  email.py
tests/: test_config.py  test_integration.py  test_models.py  test_pipeline.py  test_reader.py  test_writer.py
tests/validators/: test_date.py  test_duplicate.py  test_email.py
